fix: delete user with cascade, tests, describe getcurrentprofile routes, improve documentation of profilecomplete
