# docs/openapi.yaml
@@ -478,6 +478,21 @@ paths:
       summary: Get current user profile
       tags: &ref_2
         - profile
+    delete:
+      operationId: deleteMe
+      parameters:
+        - name: deleteAll
+          required: true
+          in: query
+          schema:
+            type: string
+      responses:
+        '200':
+          description: ''
+      security:
+        - JWT-auth: []
+      summary: Delete current user (optionally cascade all data)
+      tags: *ref_2
   /api/v1/profile:
     patch:
       operationId: updateProfile
